--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <ul class="space-y-4 mb-8">
                             <li class="flex items-center text-slate-700"><span class="bg-amber-100 text-amber-600 p-1 rounded-full mr-3"><i data-lucide="check" class="w-4 h-4"></i></span> 전 일정 5성급 럭셔리 리조트</li>
                             <li class="flex items-center text-slate-700"><span class="bg-amber-100 text-amber-600 p-1 rounded-full mr-3"><i data-lucide="check" class="w-4 h-4"></i></span> NO 가이드팁 / NO 옵션 강요</li>
-                            <li class="flex items-center text-slate-700"><span class="bg-amber-100 text-amber-600 p-1 rounded-full mr-3"><i data-lucide="check" class="w-4 h-4"></i></span> 마사지 90분 + 빈원더스 + 핵심쇼핑 2회</li>
+                            <li class="flex items-center text-slate-700"><span class="bg-amber-100 text-amber-600 p-1 rounded-full mr-3"><i data-lucide="check" class="w-4 h-4"></i></span> 마사지 90분 + 빈사파리 + 핵심쇼핑 2회</li>
                         </ul>
                         <button onclick="openModal('modal-premium')" class="w-full mt-auto bg-slate-900 text-white py-4 rounded-xl font-bold text-lg hover:bg-slate-800 transition shadow-lg flex justify-center items-center gap-2">
                             상세 일정표 확인하기 <i data-lucide="arrow-right" class="w-5 h-5"></i>
@@ -1060,3 +1060,4 @@
     </script>
 </body>
 </html>
+
