--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                         </div>
                         <div class="p-3 bg-amber-50 rounded-lg border border-amber-100">
                             <i data-lucide="castle" class="w-6 h-6 text-amber-500 mx-auto mb-2"></i>
-                            <span class="text-xs font-bold text-slate-700 block">빈원더스<br>(테마파크)</span>
+                            <span class="text-xs font-bold text-slate-700 block">빈사파리<br>(사파리버스+버드쇼+버기카트 포함)</span>
                         </div>
                         <div class="p-3 bg-amber-50 rounded-lg border border-amber-100">
                             <i data-lucide="mountain" class="w-6 h-6 text-amber-500 mx-auto mb-2"></i>
@@ -1060,4 +1060,5 @@
     </script>
 </body>
 </html>
+
 
