--- a/index.html
+++ b/index.html
@@ -712,11 +712,11 @@
                         <!-- Day 3 -->
                         <div class="relative pl-8">
                             <div class="absolute -left-[9px] top-0 w-4 h-4 rounded-full bg-blue-600 border-4 border-white shadow"></div>
-                            <h5 class="text-lg font-bold text-blue-600 mb-2">3일차 <span class="text-sm font-normal text-slate-500 ml-2">북부 투어 (빈원더스 & 그랜드월드)</span></h5>
+                            <h5 class="text-lg font-bold text-blue-600 mb-2">3일차 <span class="text-sm font-normal text-slate-500 ml-2">북부 투어 (빈사파리 & 그랜드월드)</span></h5>
                             <div class="text-sm text-slate-600 space-y-2">
                                 <p class="bg-slate-50 p-2 rounded">조식: 호텔식</p>
                                 <ul class="list-disc list-inside pl-2 space-y-1 text-slate-700">
-                                    <li><span class="font-bold">빈원더스</span> (테마파크 + 아쿠아리움)</li>
+                                    <li><span class="font-bold">빈사파리</span> (사파리버스 + 버드쇼 + 버기카포함)</li>
                                     <li>그랜드월드 자유관광 + <span class="text-amber-600 font-bold">곤돌라 탑승</span></li>
                                     <li><span class="text-amber-600 font-bold">틴호아쇼</span> 관람 (베트남 최대 야간 쇼)</li>
                                 </ul>
@@ -1060,5 +1060,6 @@
     </script>
 </body>
 </html>
+
 
 
